--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <br><img src="say-hello.jpg"width="300">
 
 <p> 만든 이 : 권도영 </p>
+  <p>응원 댓글은 저에게 큰 힘이 됩니다. </p>
 <p><div id="disqus_thread"></div>
 <script>
     /**
