--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <h1><a href="index.html">나의 첫 웹페이지</a></h1>
-  <h3>본 페이지는 2021년 12월 16일 제가 코딩공부를 시작하며 든 생각을 html을 통해 웹 문서로 나타낸 것 입니다. </h3>
+<h3>본 페이지는 2021년 12월 16일 제가 코딩공부를 시작하며 든 생각을 html을 통해 웹 문서로 나타낸 것 입니다. </h3>
 <ol>
   <li><a href="1.html" title="mindset">코딩공부를 시작하는 마음가짐</a></li>
   <li><a href="2.html" title="milestones">간단한 계획</a></li>
@@ -17,7 +17,8 @@
 <br><img src="say-hello.jpg"width="300">
 
 <p> 만든 이 : 권도영 </p>
-  <p>응원 댓글은 저에게 큰 힘이 됩니다. </p>
+<p>“You know you're in love when you can't fall asleep because reality is finally better than your dreams.”
+<strong>― Dr. Seuss</strong></p>
 <p><div id="disqus_thread"></div>
 <script>
     /**
